--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -23,78 +23,42 @@ body {
     );
     display:table-cell;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    text-transform:uppercase;
     vertical-align:middle;
 }
 
 .app {
-    background-image:url(../img/cordova.png);
-    background-repeat:no-repeat;
-    margin:0px auto;
-    width:275px;
+    margin: 0 auto;
+    width: 300px;
+    text-align: center;
 }
 
-h1 {
-    font-size:2em;
-    font-weight:300;
-    margin:0px;
-    overflow:visible;
-    padding:0px;
-    text-align:center;
+.scan {
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    font-size: 24px;
+    background-color: #35BE35;
+    padding: 10px 25px;
+    border: 1px solid #0A8D0A;
+    color: white;
+    text-shadow: 0 1px 0 #0A8D0A;
+    box-shadow: 0 1px 2px rgba(10, 141, 10, 0.32), inset 0 1px 0 rgba(255,255,255,0.3);
+    border-radius: 2px;
+    border-bottom-width: 2px;
+    margin: 0 auto;
 }
 
-.status {
-    background-color:#333333;
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    color:#FFFFFF;
-    font-size:1em;
-    margin:0px auto;
-    padding:2px 10px;
-    text-align:center;
-    width:100%;
-    max-width:175px;
+.results {
+    font-weight: bold;
+    font-size: 30px;
+    color: #333;
 }
 
-.status.complete {
-    background-color:#4B946A;
-}
-
-.hide {
-    display:none;
-}
-
-@keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
- 
-@-webkit-keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
- 
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
-}
-
-/* portrait */
-/* @media screen and (max-aspect-ratio: 1/1) */
-.app {
-    background-position:center top;
-    height:100px;              /* adds enough room for text */
-    padding:180px 0px 0px 0px; /* background height - shadow offset */
+.results .format {
+    font-size: 25px;
+    color: #666;
 }
 
 /* lanscape (when wide enough) */
 @media screen and (min-aspect-ratio: 1/1) and (min-width:445px) {
-    .app {
-        background-position:left center;
-        height:140px;       /* height + padding = background image size */
-        padding-left:170px; /* background width */
-        padding-top:60px;   /* center the text */
-    }
 }
