--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -1,7 +1,54 @@
+* {
+  box-sizing: border-box;
+}
 html,
 body {
-  width: 480px;
-  height: 800px;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  font-family: Helvetica, Arial, sans-serif;
+  color: #f5f5f5;
+}
+section {
+  width: 100%;
+  height: 100%;
+}
+.home {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+}
+.home .scan {
+  height: 50%;
+  padding-top: 60px;
+  background: #c87f70;
+}
+.home .scan .icon {
+  width: 100px;
+  background-image: url(../img/scan.svg);
+}
+.home .search {
+  height: 50%;
+  padding-top: 60px;
+  background: #d6d8e5;
+  color: #444;
+}
+.home .search .icon {
+  background-image: url(../img/search.svg);
+}
+.home .search p {
+  margin-top: 30px;
+}
+.home .icon {
+  width: 70px;
+  height: 70px;
+  margin: 0 auto;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.home p {
+  margin: 20px;
 }
