--- a/platforms/android/assets/www/less/style.less
+++ b/platforms/android/assets/www/less/style.less
@@ -1,10 +1,63 @@
+@foreground: #c87f70;
+@background: #d6d8e5;
+
+* { box-sizing: border-box; }
+
 html, body {
-  width: 480px;
-  height: 800px;
+  width: 100%; // 320
+  height: 100%; // 508
   margin: 0;
   padding: 0;
+  font-family: Helvetica, Arial, sans-serif;
+  color: #f5f5f5;
 }
 
-.app {
+section {
+  width: 100%;
+  height: 100%;
+}
 
+.home {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+
+  .scan {
+    height: 50%;
+    padding-top: 60px;
+    background: @foreground;
+
+    .icon {
+      width: 100px;
+      background-image: url(../img/scan.svg);
+    }
+  }
+
+  .search {
+    height: 50%;
+    padding-top: 60px;
+    background: @background;
+    color: #444;
+
+    .icon {
+      background-image: url(../img/search.svg);
+    }
+
+    p {
+      margin-top: 30px;
+    }
+  }
+
+  .icon {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+  p {
+    margin: 20px;
+  }
 }
