--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -10,6 +10,9 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   color: #f5f5f5;
 }
+body {
+  display: none;
+}
 section {
   width: 100%;
   height: 100%;
@@ -29,6 +32,9 @@ section {
   width: 100px;
   background-image: url(../img/scan.svg);
 }
+.home .scan.touch {
+  background: #984a3a;
+}
 .home .search {
   height: 50%;
   padding-top: 60px;
@@ -40,6 +46,9 @@ section {
 }
 .home .search p {
   margin-top: 30px;
+}
+.home .search.touch {
+  background: #989dbd;
 }
 .home .icon {
   width: 70px;
