--- a/platforms/android/assets/www/less/style.less
+++ b/platforms/android/assets/www/less/style.less
@@ -12,6 +12,8 @@ html, body {
   color: #f5f5f5;
 }
 
+body { display: none; }
+
 section {
   width: 100%;
   height: 100%;
@@ -32,6 +34,10 @@ section {
       width: 100px;
       background-image: url(../img/scan.svg);
     }
+
+    &.touch {
+      background: darken(@foreground, 20%);
+    }
   }
 
   .search {
@@ -47,6 +53,10 @@ section {
     p {
       margin-top: 30px;
     }
+
+    &.touch {
+      background: darken(@background, 20%);
+    }
   }
 
   .icon {
@@ -57,6 +67,7 @@ section {
     background-repeat: no-repeat;
     background-position: center center;
   }
+
   p {
     margin: 20px;
   }
