--- a/platforms/android/assets/www/less/style.less
+++ b/platforms/android/assets/www/less/style.less
@@ -4,22 +4,31 @@
 * { box-sizing: border-box; }
 
 html, body {
-  width: 100%; // 320
+  width: 320px; // 320
   height: 100%; // 508
   margin: 0;
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
   color: #f5f5f5;
+  overflow: hidden;
 }
 
-body { display: none; }
-
-section {
-  width: 100%;
+.app {
+  width: 640px;
   height: 100%;
+  background: @background;
+
+  section {
+    margin: 0;
+    padding: 0;
+    width: 320px;
+    height: 100%;
+    display: inline-block;
+    vertical-align: top;
+  }
 }
 
-.home {
+#home {
   text-align: center;
   font-size: 30px;
   font-weight: bold;
@@ -70,5 +79,32 @@ section {
 
   p {
     margin: 20px;
+  }
+}
+
+#product {
+  .info {
+    padding: 20px 20px;
+    width: 100%;
+    background: @foreground;
+
+    h1 {
+      font-size: 18px;
+      margin-top: 0;
+    }
+
+    img {
+      width: 60px;
+      height: 60px;
+      float: left;
+      margin-right: 15px;
+      border: 5px solid darken(@foreground, 3%);
+    }
+
+    .description {
+      font-size: 13px;
+      vertical-align: top;
+      line-height: 1.5em;
+    }
   }
 }
