--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -12,6 +12,7 @@ body {
   overflow: hidden;
 }
 .app {
+  position: absolute;
   width: 640px;
   height: 100%;
   background: #d6d8e5;
@@ -68,6 +69,10 @@ body {
 #home p {
   margin: 20px;
 }
+#product {
+  overflow: scroll;
+  height: 100%;
+}
 #product .info {
   padding: 20px 20px;
   width: 100%;
@@ -82,10 +87,73 @@ body {
   height: 60px;
   float: left;
   margin-right: 15px;
+  margin-top: 5px;
   border: 5px solid #c47565;
 }
 #product .info .description {
   font-size: 13px;
   vertical-align: top;
   line-height: 1.5em;
+}
+#product .info .rating-container {
+  width: 260px;
+  margin: 0 auto;
+  padding-top: 5px;
+  font-size: 0.8em;
+}
+#product .info .rating-container span {
+  padding-left: 5px;
+}
+#product .info .rating-container .bar {
+  position: relative;
+  margin-top: 5px;
+  height: 30px;
+  background-color: #ba5e4b;
+  border: 3px solid #ba5e4b;
+  text-align: center;
+}
+#product .info .rating-container .bar .fill {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #F8EFEF;
+  -webkit-transition: width 1.25s;
+}
+#product .contents ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+#product .contents li {
+  background-color: #f5f5f5;
+  width: 100%;
+  padding: 22px 20px;
+  margin-bottom: 2px;
+  height: 70px;
+  font-size: 20px;
+}
+#product .contents li .name {
+  display: inline-block;
+  width: 70%;
+  font-weight: bold;
+  color: #c87f70;
+}
+#product .contents li .percent {
+  display: inline-block;
+  width: 30%;
+  text-align: right;
+  font-size: 0.9em;
+  color: #555;
+}
+#product .risks ul {
+  list-style-type: square;
+  width: 250px;
+  margin: 20px auto;
+  padding: 0;
+  color: #555;
+  font-size: 16px;
+}
+#product .risks li {
+  padding: 5px;
 }
