--- a/platforms/android/assets/www/less/style.less
+++ b/platforms/android/assets/www/less/style.less
@@ -14,6 +14,7 @@ html, body {
 }
 
 .app {
+  position: absolute;
   width: 640px;
   height: 100%;
   background: @background;
@@ -83,6 +84,8 @@ html, body {
 }
 
 #product {
+  overflow: scroll;
+  height: 100%;
   .info {
     padding: 20px 20px;
     width: 100%;
@@ -98,6 +101,7 @@ html, body {
       height: 60px;
       float: left;
       margin-right: 15px;
+      margin-top: 5px;
       border: 5px solid darken(@foreground, 3%);
     }
 
@@ -105,6 +109,81 @@ html, body {
       font-size: 13px;
       vertical-align: top;
       line-height: 1.5em;
+    }
+
+    .rating-container {
+      width: 260px;
+      margin: 0 auto;
+      padding-top: 5px;
+      font-size: 0.8em;
+
+      span {
+        padding-left: 5px;
+      }
+
+      .bar {
+        position: relative;
+        margin-top: 5px;
+        height: 30px;
+        background-color: darken(@foreground, 10%);
+        border: 3px solid darken(@foreground, 10%);
+        text-align: center;
+
+        .fill {
+          position: absolute;
+          height: 100%;
+          top: 0;
+          left: 0;
+          background-color: #F8EFEF;
+
+          -webkit-transition: width 1.25s;
+        }
+      }
+    }
+
+  }
+  .contents {
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    li {
+      background-color: #f5f5f5;
+      width: 100%;
+      padding: 22px 20px;
+      margin-bottom: 2px;
+      height: 70px;
+      font-size: 20px;
+
+      .name {
+        display: inline-block;
+        width: 70%;
+        font-weight: bold;
+        color: @foreground;
+      }
+
+      .percent {
+        display: inline-block;
+        width: 30%;
+        text-align: right;
+        font-size: 0.9em;
+        color: #555;
+      }
+    }
+  }
+  .risks {
+    ul {
+      list-style-type: square;
+      width: 250px;
+      margin: 20px auto;
+      padding: 0;
+      color: #555;
+      font-size: 16px;
+
+    }
+    li {
+      padding: 5px;
     }
   }
 }
