--- a/platforms/android/assets/www/less/style.less
+++ b/platforms/android/assets/www/less/style.less
@@ -1,22 +1,27 @@
 @foreground: #c87f70;
 @background: #d6d8e5;
 
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+}
 
 html, body {
-  width: 320px; // 320
-  height: 100%; // 508
+  width: 320px;
+  height: 508px;
   margin: 0;
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
   color: #f5f5f5;
   overflow: hidden;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+  -webkit-user-select: none;
 }
 
 .app {
-  position: absolute;
-  width: 640px;
+  position: relative;
   height: 100%;
+  width: 960px;
   background: @background;
 
   section {
@@ -80,6 +85,55 @@ html, body {
 
   p {
     margin: 20px;
+  }
+}
+
+#search-results {
+  display: none;
+  height: 100%;
+  overflow: scroll;
+
+  h1 {
+    width: 100%;
+    background-color: @foreground;
+    text-align: center;
+    margin: 0;
+    padding: 10px;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    background-color: #f5f5f5;
+    width: 100%;
+    padding: 12px 14px;
+    margin-bottom: 2px;
+    height: 70px;
+    font-size: 16px;
+
+    img {
+      width: 50px;
+      height: 50px;
+      border: 5px solid #f0f0f0;
+      margin-right: 10px;
+    }
+    .name {
+      display: inline-block;
+      vertical-align: top;
+      margin-top: 5px;
+      width: 200px;
+      font-weight: bold;
+      color: @foreground;
+    }
+
+    &.touch {
+      background: darken(#f5f5f5, 10%);
+    }
+
   }
 }
 
