Divided rating into health and environment hazardousness

--- a/platforms/android/assets/www/less/style.less
+++ b/platforms/android/assets/www/less/style.less
@@ -165,7 +165,7 @@ html, body {
       line-height: 1.5em;
     }
 
-    .rating-container {
+    .bar-container {
       width: 260px;
       margin: 0 auto;
       padding-top: 5px;
@@ -193,8 +193,10 @@ html, body {
           -webkit-transition: width 1.25s;
         }
       }
+      &.health {
+        padding-top: 10px;
+      }
     }
-
   }
   .contents {
     ul {
