--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -140,16 +140,16 @@ body {
   vertical-align: top;
   line-height: 1.5em;
 }
-#product .info .rating-container {
+#product .info .bar-container {
   width: 260px;
   margin: 0 auto;
   padding-top: 5px;
   font-size: 0.8em;
 }
-#product .info .rating-container span {
+#product .info .bar-container span {
   padding-left: 5px;
 }
-#product .info .rating-container .bar {
+#product .info .bar-container .bar {
   position: relative;
   margin-top: 5px;
   height: 30px;
@@ -157,13 +157,16 @@ body {
   border: 3px solid #ba5e4b;
   text-align: center;
 }
-#product .info .rating-container .bar .fill {
+#product .info .bar-container .bar .fill {
   position: absolute;
   height: 100%;
   top: 0;
   left: 0;
   background-color: #F8EFEF;
   -webkit-transition: width 1.25s;
+}
+#product .info .bar-container.health {
+  padding-top: 10px;
 }
 #product .contents ul {
   list-style: none;
