--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -176,10 +176,10 @@ body {
 #product .contents li {
   background-color: #f5f5f5;
   width: 100%;
-  padding: 22px 20px;
+  padding: 25px 20px;
   margin-bottom: 2px;
   height: 70px;
-  font-size: 20px;
+  font-size: 18px;
 }
 #product .contents li .name {
   display: inline-block;
@@ -193,6 +193,7 @@ body {
   text-align: right;
   font-size: 0.9em;
   color: #555;
+  vertical-align: top;
 }
 #product .risks ul {
   list-style-type: square;
