--- a/platforms/android/assets/www/less/style.less
+++ b/platforms/android/assets/www/less/style.less
@@ -207,10 +207,10 @@ html, body {
     li {
       background-color: #f5f5f5;
       width: 100%;
-      padding: 22px 20px;
+      padding: 25px 20px;
       margin-bottom: 2px;
       height: 70px;
-      font-size: 20px;
+      font-size: 18px;
 
       .name {
         display: inline-block;
@@ -225,6 +225,7 @@ html, body {
         text-align: right;
         font-size: 0.9em;
         color: #555;
+        vertical-align: top;
       }
     }
   }
