--- a/platforms/android/assets/www/less/style.less
+++ b/platforms/android/assets/www/less/style.less
@@ -3,7 +3,6 @@
 
 * {
   box-sizing: border-box;
-  -webkit-backface-visibility: hidden;
 }
 
 html, body {
@@ -23,6 +22,7 @@ html, body {
   height: 100%;
   width: 960px;
   background: @background;
+  -webkit-backface-visibility: hidden;
 
   section {
     margin: 0;
@@ -176,7 +176,6 @@ html, body {
       }
 
       .bar {
-        position: relative;
         margin-top: 5px;
         height: 30px;
         background-color: darken(@foreground, 10%);
@@ -184,10 +183,8 @@ html, body {
         text-align: center;
 
         .fill {
-          position: absolute;
+          width: 0%;
           height: 100%;
-          top: 0;
-          left: 0;
           background-color: #F8EFEF;
 
           -webkit-transition: width 1.25s;
